chore: Refactor test setup methods in PersonControllerTest and AuthControllerTest